# rsa-template

./: .gitignore  CMakeLists.txt  README.md
common_include/: common.h
common_src/: common1.cpp  common2.cpp
modules/module_A/: CMakeLists.txt  mainA.cpp  moduleA.h
modules/module_B/: CMakeLists.txt  mainB.cpp  moduleB.h
